--- a/revalida-shopping-app/src/app/modules/admin/pages/admin-dashboard/admin-dashboard.component.scss
+++ b/revalida-shopping-app/src/app/modules/admin/pages/admin-dashboard/admin-dashboard.component.scss
@@ -2,9 +2,7 @@ section {
   height: 100%;
 }
 
-.navbar-nav ul > li {
-    cursor: pointer;
-}
+
 
 #layoutAuthentication {
   display: flex;
@@ -19,6 +17,7 @@ section {
   min-width: 0;
 }
 
+// Side Navbar styles
 #layoutSidenav {
   display: flex;
 }
@@ -124,11 +123,17 @@ section {
   margin-right: 0.5rem;
 }
 
+// Top Navbar
 .sb-topnav {
   padding-left: 0;
   height: 56px;
   z-index: 1039;
 }
+
+.sb-topnav .navbar-nav ul > li {
+  cursor: pointer;
+}
+
 .sb-topnav .navbar-brand {
   width: 225px;
   margin: 0;
@@ -140,109 +145,110 @@ section {
   color: #212529;
 }
 
-.sb-sidenav {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  flex-wrap: nowrap;
-}
-.sb-sidenav .sb-sidenav-menu {
-  flex-grow: 1;
-}
-.sb-sidenav .sb-sidenav-menu .nav {
-  flex-direction: column;
-  flex-wrap: nowrap;
-}
-.sb-sidenav .sb-sidenav-menu .nav .sb-sidenav-menu-heading {
-  padding: 1.75rem 1rem 0.75rem;
-  font-size: 0.75rem;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-.sb-sidenav .sb-sidenav-menu .nav .nav-link {
-  display: flex;
-  align-items: center;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  position: relative;
-}
-.sb-sidenav .sb-sidenav-menu .nav .nav-link .sb-nav-link-icon {
-  font-size: 0.9rem;
-}
-.sb-sidenav .sb-sidenav-menu .nav .nav-link .sb-sidenav-collapse-arrow {
-  display: inline-block;
-  margin-left: auto;
-  transition: transform 0.15s ease;
-}
-.sb-sidenav .sb-sidenav-menu .nav .nav-link.collapsed .sb-sidenav-collapse-arrow {
-  transform: rotate(-90deg);
-}
-.sb-sidenav .sb-sidenav-menu .nav .sb-sidenav-menu-nested {
-  margin-left: 1.5rem;
-  flex-direction: column;
-}
-.sb-sidenav .sb-sidenav-footer {
-  padding: 0.75rem;
-  flex-shrink: 0;
-}
+// Sidenav Styles
+// .sb-sidenav {
+//   display: flex;
+//   flex-direction: column;
+//   height: 100%;
+//   flex-wrap: nowrap;
+// }
+// .sb-sidenav .sb-sidenav-menu {
+//   flex-grow: 1;
+// }
+// .sb-sidenav .sb-sidenav-menu .nav {
+//   flex-direction: column;
+//   flex-wrap: nowrap;
+// }
+// .sb-sidenav .sb-sidenav-menu .nav .sb-sidenav-menu-heading {
+//   padding: 1.75rem 1rem 0.75rem;
+//   font-size: 0.75rem;
+//   font-weight: bold;
+//   text-transform: uppercase;
+// }
+// .sb-sidenav .sb-sidenav-menu .nav .nav-link {
+//   display: flex;
+//   align-items: center;
+//   padding-top: 0.75rem;
+//   padding-bottom: 0.75rem;
+//   position: relative;
+// }
+// .sb-sidenav .sb-sidenav-menu .nav .nav-link .sb-nav-link-icon {
+//   font-size: 0.9rem;
+// }
+// .sb-sidenav .sb-sidenav-menu .nav .nav-link .sb-sidenav-collapse-arrow {
+//   display: inline-block;
+//   margin-left: auto;
+//   transition: transform 0.15s ease;
+// }
+// .sb-sidenav .sb-sidenav-menu .nav .nav-link.collapsed .sb-sidenav-collapse-arrow {
+//   transform: rotate(-90deg);
+// }
+// .sb-sidenav .sb-sidenav-menu .nav .sb-sidenav-menu-nested {
+//   margin-left: 1.5rem;
+//   flex-direction: column;
+// }
+// .sb-sidenav .sb-sidenav-footer {
+//   padding: 0.75rem;
+//   flex-shrink: 0;
+// }
 
-.sb-sidenav-dark {
-  background-color: #212529;
-  color: rgba(255, 255, 255, 0.5);
-}
-.sb-sidenav-dark .sb-sidenav-menu .sb-sidenav-menu-heading {
-  color: rgba(255, 255, 255, 0.25);
-}
-.sb-sidenav-dark .sb-sidenav-menu .nav-link {
-  color: rgba(255, 255, 255, 0.5);
-}
-.sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-nav-link-icon {
-  color: rgba(255, 255, 255, 0.25);
-}
-.sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
-  color: rgba(255, 255, 255, 0.25);
-}
-.sb-sidenav-dark .sb-sidenav-menu .nav-link:hover {
-  color: #fff;
-}
-.sb-sidenav-dark .sb-sidenav-menu .nav-link.active {
-  color: #fff;
-}
-.sb-sidenav-dark .sb-sidenav-menu .nav-link.active .sb-nav-link-icon {
-  color: #fff;
-}
-.sb-sidenav-dark .sb-sidenav-footer {
-  background-color: #343a40;
-}
+// .sb-sidenav-dark {
+//   background-color: #212529;
+//   color: rgba(255, 255, 255, 0.5);
+// }
+// .sb-sidenav-dark .sb-sidenav-menu .sb-sidenav-menu-heading {
+//   color: rgba(255, 255, 255, 0.25);
+// }
+// .sb-sidenav-dark .sb-sidenav-menu .nav-link {
+//   color: rgba(255, 255, 255, 0.5);
+// }
+// .sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-nav-link-icon {
+//   color: rgba(255, 255, 255, 0.25);
+// }
+// .sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
+//   color: rgba(255, 255, 255, 0.25);
+// }
+// .sb-sidenav-dark .sb-sidenav-menu .nav-link:hover {
+//   color: #fff;
+// }
+// .sb-sidenav-dark .sb-sidenav-menu .nav-link.active {
+//   color: #fff;
+// }
+// .sb-sidenav-dark .sb-sidenav-menu .nav-link.active .sb-nav-link-icon {
+//   color: #fff;
+// }
+// .sb-sidenav-dark .sb-sidenav-footer {
+//   background-color: #343a40;
+// }
 
-.sb-sidenav-light {
-  background-color: #f8f9fa;
-  color: #212529;
-}
-.sb-sidenav-light .sb-sidenav-menu .sb-sidenav-menu-heading {
-  color: #adb5bd;
-}
-.sb-sidenav-light .sb-sidenav-menu .nav-link {
-  color: #212529;
-}
-.sb-sidenav-light .sb-sidenav-menu .nav-link .sb-nav-link-icon {
-  color: #adb5bd;
-}
-.sb-sidenav-light .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
-  color: #adb5bd;
-}
-.sb-sidenav-light .sb-sidenav-menu .nav-link:hover {
-  color: #0d6efd;
-}
-.sb-sidenav-light .sb-sidenav-menu .nav-link.active {
-  color: #0d6efd;
-}
-.sb-sidenav-light .sb-sidenav-menu .nav-link.active .sb-nav-link-icon {
-  color: #0d6efd;
-}
-.sb-sidenav-light .sb-sidenav-footer {
-  background-color: #e9ecef;
-}
+// .sb-sidenav-light {
+//   background-color: #f8f9fa;
+//   color: #212529;
+// }
+// .sb-sidenav-light .sb-sidenav-menu .sb-sidenav-menu-heading {
+//   color: #adb5bd;
+// }
+// .sb-sidenav-light .sb-sidenav-menu .nav-link {
+//   color: #212529;
+// }
+// .sb-sidenav-light .sb-sidenav-menu .nav-link .sb-nav-link-icon {
+//   color: #adb5bd;
+// }
+// .sb-sidenav-light .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
+//   color: #adb5bd;
+// }
+// .sb-sidenav-light .sb-sidenav-menu .nav-link:hover {
+//   color: #0d6efd;
+// }
+// .sb-sidenav-light .sb-sidenav-menu .nav-link.active {
+//   color: #0d6efd;
+// }
+// .sb-sidenav-light .sb-sidenav-menu .nav-link.active .sb-nav-link-icon {
+//   color: #0d6efd;
+// }
+// .sb-sidenav-light .sb-sidenav-footer {
+//   background-color: #e9ecef;
+// }
 
 .datatable-wrapper .datatable-container {
   font-size: 0.875rem;
