--- a/revalida-shopping-app/src/app/modules/admin/pages/orders/orders.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/orders/orders.component.html
@@ -1,19 +1,170 @@
 <section class="sb-nav-fixed">
-    <app-admin-topnav></app-admin-topnav>
-    <div id="layoutSidenav">
-        <div id="layoutSidenav_nav">
-            <app-admin-sidenav [adminName]="adminName"></app-admin-sidenav>
-            <!-- <app-admin-sidenav  [sidebarToggleInput]="sideToggleBtn" [adminSidenavInput]="adminSection"></app-admin-sidenav> -->
-        </div>
-        <div id="layoutSidenav_content">
-            <main>
-                <div class="table-container">
-                    <div class="table-responsive">
+  <app-admin-topnav></app-admin-topnav>
+  <div id="layoutSidenav">
+    <div id="layoutSidenav_nav">
+      <app-admin-sidenav [adminName]="adminName"></app-admin-sidenav>
+      <!-- <app-admin-sidenav  [sidebarToggleInput]="sideToggleBtn" [adminSidenavInput]="adminSection"></app-admin-sidenav> -->
+    </div>
+    <div id="layoutSidenav_content">
+      <main>
+        <div class="table-container">
+          <div class="table-responsive">
+            <div class="table-wrapper">
+              <div class="table-title">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <h2>Order <b>Details</b></h2>
+                  </div>
+                  <div class="col-sm-8">
+                    <a href="#" class="btn btn-primary"
+                      ><i class="material-icons">&#xE863;</i>
+                      <span>Refresh List</span></a
+                    >
+                    <a href="#" class="btn btn-secondary"
+                      ><i class="material-icons">&#xE24D;</i>
+                      <span>Export to Excel</span></a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="table-filter">
+                <div class="row">
+                  <div class="col-sm-3">
+                    <div class="show-entries">
+                      <span>Show</span>
+                      <select class="form-select">
+                        <option>5</option>
+                        <option>10</option>
+                        <option>15</option>
+                        <option>20</option>
+                      </select>
+                      <span>entries</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-9">
+                    <button type="button" class="btn btn-primary">
+                      <i class="fa fa-search"></i>
+                    </button>
+                    <div class="filter-group">
+                      <label>Name</label>
+                      <input type="text" class="form-control" />
+                    </div>
+                    <div class="filter-group">
+                      <label>Location</label>
+                      <select class="form-select">
+                        <option>All</option>
+                        <option>Berlin</option>
+                        <option>London</option>
+                        <option>Madrid</option>
+                        <option>New York</option>
+                        <option>Paris</option>
+                      </select>
+                    </div>
+                    <div class="filter-group">
+                      <label>Status</label>
+                      <select class="form-select">
+                        <option>Any</option>
+                        <option>Delivered</option>
+                        <option>Shipped</option>
+                        <option>Pending</option>
+                        <option>Cancelled</option>
+                      </select>
+                    </div>
+                    <span class="filter-icon"
+                      ><i class="fa fa-filter"></i
+                    ></span>
+                  </div>
+                </div>
+              </div>
+              <table class="table table-striped table-hover">
+                <thead>
+                  <tr>
+                    <!-- <th>#</th>
+                                        <th>Customer</th>
+                                        <th>Location</th>
+                                        <th>Order Date</th>						
+                                        <th>Status</th>						
+                                        <th>Net Amount</th>
+                                        <th>Action</th> -->
+                    <th>Customer</th>
+                    <th>Location</th>
+                    <th>Order Date</th>
+                    <th>Payment Mode</th>
+                    <th>Status</th>
+                    <th>Item Name</th>
+                    <th>Quantity</th>
+                    <th>Subtotal</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- 
+                                    Delivered - bg-success
+                                    Shipped - bg-info
+                                    Cancelled - bg-danger
+                                    Pending - bg-warning -->
+                  <tr (click)="viewOrderSummary(i)" data-bs-toggle="modal" data-bs-target="#viewOrderModal" *ngFor="let order of orders$ | async; let i = index">
+                    <td>
+                      <a href="#"
+                        ><img
+                          src="assets/users/{{ i + 1 }}.jpg"
+                          class="avatar"
+                          alt="Avatar"
+                        />
+                        {{ order.customer }}</a
+                      >
+                    </td>
+                    <td>{{ order.location }}</td>
+                    <td>{{ order.datetime }}</td>
+                    <td>{{ order.payment_mode }}</td>
+                    <td>
+                      <small class="badge bg-{{ badgeStyle[order.status] }}">{{
+                        order.status
+                      }}</small>
+                    </td>
+                    <td>{{ order.item_name }}</td>
+                    <td>{{ order.quantity }}</td>
+                    <td>{{ order.subtotal | currency : "PHP" }}</td>
+                    <td>
+                      <a
+                        href="#"
+                        class="view"
+                        title="View Details"
+                        data-toggle="tooltip"
+                        ><i class="material-icons">&#xE5C8;</i></a
+                      >
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <div class="clearfix">
+                <div class="hint-text">
+                  Showing <b>5</b> out of <b>25</b> entries
+                </div>
+                <ul class="pagination">
+                  <li class="page-item disabled"><a href="#">Previous</a></li>
+                  <li class="page-item"><a href="#" class="page-link">1</a></li>
+                  <li class="page-item"><a href="#" class="page-link">2</a></li>
+                  <li class="page-item"><a href="#" class="page-link">3</a></li>
+                  <li class="page-item active">
+                    <a href="#" class="page-link">4</a>
+                  </li>
+                  <li class="page-item"><a href="#" class="page-link">5</a></li>
+                  <li class="page-item"><a href="#" class="page-link">6</a></li>
+                  <li class="page-item"><a href="#" class="page-link">7</a></li>
+                  <li class="page-item">
+                    <a href="#" class="page-link">Next</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="table-responsive">
                       <div class="table-wrapper">
                         <div class="table-title">
                           <div class="row">
                             <div class="col-sm-6">
-                              <h2>Manage <b>Users</b></h2>
+                              <h2>Customer <b>Orders</b></h2>
                             </div>
                             <div class="col-sm-6">
                               <a href="" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addUserModal"><i class="material-icons">&#xE147;</i> <span>Add New User</span></a>
@@ -75,32 +226,121 @@
                           </ul>
                         </div>
                       </div>
-                    </div>        
-                  </div>
-                  <!-- Deactivate Selected Modal HTML -->
-                  <div id="deactivateSelectedUserModal" class="modal fade">
-                    <div class="modal-dialog">
-                      <div class="modal-content">
-                        <form>
-                          <div class="modal-header">						
-                            <h4 class="modal-title">Deactivate User</h4>
-                            <button #closeModalDeactChecked type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
-                          </div>
-                          <div class="modal-body">					
-                            <p>Are you sure you want to deactivate these users?</p>
-                            <p class="text-warning"><small>This action cannot be undone.</small></p>
-                          </div>
-                          <div class="modal-footer">
-                            <input type="button" class="btn btn-default" data-bs-dismiss="modal" value="Cancel">
-                            <input type="submit" class="btn btn-danger" value="Deactivate">
-                          </div>
-                        </form>
-                      </div>
-                    </div>
-                  </div>     
-            </main>
-            <app-admin-footer></app-admin-footer>
+                    </div>         -->
         </div>
+        <!-- View Modal HTML -->
+        <div id="viewOrderModal" class="modal fade">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <form>
+                <div class="modal-header">
+                  <h5 class="modal-title">Order Summary</h5>
+                  <button
+                    #closeModalEdit
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                    <div class="card">
+                        <div class="card-body mx-4">
+                            <div class="container">
+                                <!-- <p class="my-3 mx-5 text-center" style="font-size: 24px;">Thank for your purchase!</p> -->
+                                <div class="row">
+                                    <ul class="list-unstyled">
+                                        <div class="order-date">
+                                            <li class="text-muted mt-1"><strong><span class="text-black">Order</span> #3362</strong></li>
+                                            <li class="text-black mt-1">Jun 23, 2023, 11:37 AM</li>
+                                        </div>
+                                        <div class="customer-loc">
+                                            <li *ngIf="selectedOrder" class="text-black mt-1">{{selectedOrder.customer}}</li>
+                                            <li *ngIf="selectedOrder" class="text-black mt-1">{{selectedOrder.location}}</li>
+                                        </div>
+                                        <div class="payment-status">
+                                            <li *ngIf="selectedOrder" class="text-black mt-1">
+                                                Status: <small class="badge bg-{{ badgeStyle[selectedOrder.status] }}">{{selectedOrder.status}}</small></li>
+                                            <li *ngIf="selectedOrder" class="text-black mt-1">Payment: {{selectedOrder.payment_mode}}</li>
+                                        </div>
+                                    </ul>
+                                    <table class="table table-striped table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>Item</th>
+                                                <th>Qty</th>
+                                                <th>Unit Price</th>
+                                                <th>Subtotal</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngIf="selectedOrder">
+                                               <td>{{selectedOrder.item_name}}</td>
+                                               <td>{{selectedOrder.quantity}}</td>
+                                               <td>{{(selectedOrder.subtotal / selectedOrder.quantity) | currency: 'PHP': 'symbol': '1.1-2'}}</td>
+                                               <td>{{selectedOrder.subtotal | currency: 'PHP': 'symbol': '1.1-2'}}</td> 
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="row text-black">
+                                    <div class="col-xl-12">
+                                        <p *ngIf="selectedOrder" class="float-end fw-bold">Total: {{selectedOrder.subtotal | currency: 'PHP': 'symbol': '1.1-2'}}</p>
+                                    </div>
+                                    <hr style="border: 2px solid black;">
+                                </div>
+                                <p class="store">Click&Get Online Convenience Store</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                  <input type="button" class="btn btn-primary" data-bs-dismiss="modal" value="Understood" />
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <!-- Deactivate Selected Modal HTML -->
+        <div id="deactivateSelectedUserModal" class="modal fade">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <form>
+                <div class="modal-header">
+                  <h4 class="modal-title">Deactivate User</h4>
+                  <button
+                    #closeModalDeactChecked
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-hidden="true"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <p>Are you sure you want to deactivate these users?</p>
+                  <p class="text-warning">
+                    <small>This action cannot be undone.</small>
+                  </p>
+                </div>
+                <div class="modal-footer">
+                  <input
+                    type="button"
+                    class="btn btn-default"
+                    data-bs-dismiss="modal"
+                    value="Cancel"
+                  />
+                  <input
+                    type="submit"
+                    class="btn btn-danger"
+                    value="Deactivate"
+                  />
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </main>
+      <app-admin-footer></app-admin-footer>
     </div>
-    <!-- <app-footer></app-footer> -->
+  </div>
+  <!-- <app-footer></app-footer> -->
 </section>
