--- a/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.html
+++ b/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.html
@@ -13,7 +13,7 @@
                 <div class="sb-nav-link-icon"><i class="fa-solid fa-boxes-stacked"></i></div>
                 Products
             </a>
-            <a class="nav-link" href="#">
+            <a class="nav-link" routerLink="/admin/orders">
                 <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-fast"></i></div>
                 Orders
             </a>
